added sub headers in side nav, corrected div container in testing, linked contributions to page via side nav not button

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -3,22 +3,30 @@
   <mat-sidenav #sidenav class="sidenav" mode="side" opened="false" [fixedInViewport]="true"
                [fixedTopGap]="headerHeight + 8">
     <div><mat-toolbar class = "component-side-nav">Components</mat-toolbar></div>
+
     <mat-nav-list dense>
       <div *ngFor="let item of navItems">
         <h3><a mat-list-item [routerLink]="[item.route]"><span mat-line>{{ item.name }}</span></a></h3>
       </div>
     </mat-nav-list>
 
-    <div><mat-toolbar class = "component-side-nav">Testing</mat-toolbar></div>
+
+    <mat-divider></mat-divider>
+    <p matSubheader class="sidenav-subheader">Testing</p>
     <mat-nav-list dense>
       <div *ngFor="let testItem of testNavItems">
         <h3><a mat-list-item [routerLink]="[testItem.route]"><span mat-line>{{ testItem.name }}</span></a></h3>
       </div>
     </mat-nav-list>
 
-    <ign-center><pre><a mat-raised-button color = "accent" [routerLink]="['contribution']">
-      Doc Site Contributions
-    </a></pre></ign-center>
+    <mat-divider></mat-divider>
+    <p matSubheader class="sidenav-subheader">Contributions</p>
+    <mat-nav-list dense>
+    <h5><a mat-list-item [routerLink]="['contribution']">
+      <span mat-line>Doc Site Contributions</span>
+    </a></h5>
+    </mat-nav-list>
+
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar>
