--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -1,23 +1,19 @@
 .status-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr 2fr 2fr 1fr;
     grid-auto-rows: repeat(6, auto);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    margin: 0 auto;
     grid-template-areas:
         "header header header header"
-        ". content1 content1 ."
-        ". content1 content1 ."
+        "content1 content1 content1 content1"
         "activity activity activity activity"
-        "content3 content3 content4 content4"
-        "content3 content3 content4 content4"
+        "content2 content2 content3 content3"
         "builds builds builds builds"
-        "content5 content5 content6 content6"
-        "content5 content5 content6 content6";
+        "content4 content4 content4 content4";
 }
 
-.a {
+.g-header {
     grid-area: header;
     text-align: center;
     border-bottom: 5px;
@@ -26,80 +22,84 @@
     max-height: 200px;
 }
 
-.c {
+.g-content-one {
     grid-area: content1;
 }
 
-.d {
+.g-header-two {
     grid-area: activity;
-    text-align: center;
+    text-align: start;
     min-width: 250px;
     min-height: 75px;
     max-height: 200px;
 }
 
-.e {
+.g-content-two {
+    grid-area: content2;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+        "header"
+        "image"
+        "commit";
+}
+
+.g-sub-header {
+    grid-area: header;
+}
+
+.g-sub-image {
+    grid-area: image;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+        "image author . . . ."
+}
+
+.g-sub-image > .image-section {
+    grid-area: image;
+}
+
+.g-sub-image > .author-section {
+    grid-area: author;
+}
+
+.g-sub-content {
+    grid-area: commit;
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
+.g-content-three {
     grid-area: content3;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 0.5fr 2fr;
-    grid-template-rows: 0.5fr 2fr;
+    grid-template-rows: auto auto auto;
     grid-template-areas: 
-        "header header"
-        "image commit";
+        "header"
+        "image"
+        "commit";
 }
 
-.e1 {
-    grid-area: header;
-}
-
-.e2 {
-    grid-area: image;
-}
-
-.e3 {
-    grid-area: commit;
-}
-
-.f {
-    grid-area: content4;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 0.5fr 2fr;
-    grid-template-rows: 0.5fr 2fr;
-    grid-template-areas: 
-        "header header"
-        "image commit";
-}
-
-.f1 {
-    grid-area: header;
-}
-
-.f2 {
-    grid-area: image;
-}
-
-.f3 {
-    grid-area: commit;
-}
-
-.g {
+.g-header-three {
     grid-area: builds;
-    text-align: center;
+    text-align: start;
 }
 
-.h {
+.g-content-four {
+    grid-area: content4;
+    min-height: 337px;
+}
+
+.g-content-five {
     grid-area: content5;
 }
-
-.i {
-    grid-area: content6;
-}
 .avatar {
-    height: 15rem;
-    width: 15rem;
-    border: 3px solid black;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
     padding: 0;
 }
 
@@ -129,6 +129,6 @@ mat-panel-description {
     width: 50%;
 }
 
-#failingSubTitle {
-    color: red;
+p {
+    line-height: 1.5;
 }
