--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -32,6 +32,7 @@
     min-width: 250px;
     min-height: 75px;
     max-height: 200px;
+    margin-bottom: 0;
 }
 
 .g-content-two {
@@ -72,6 +73,11 @@
     overflow: hidden;
 }
 
+.author-section {
+    word-wrap: break-word;
+    overflow: hidden;
+}
+
 .g-content-three {
     grid-area: content3;
     display: grid;
@@ -90,7 +96,7 @@
 
 .g-content-four {
     grid-area: content4;
-    min-height: 337px;
+    min-height: 350px;
 }
 
 .g-content-five {
@@ -109,16 +115,16 @@
     margin-right: 5rem;
 }
 
+a {
+    text-decoration: none;
+}
+
 .information {
     font-size: 1.25rem;
 }
 
 .header {
     font-size: 2rem;
-}
-
-span {
-    font-weight: bold;
 }
 
 mat-panel-title {
