--- a/demo-app/app/testing/components/status/status.component.html
+++ b/demo-app/app/testing/components/status/status.component.html
@@ -10,16 +10,14 @@
 
         <h2>Last Successful Run</h2>
         <mat-card-content>
-            <p>
-                <span>Author:</span> {{ data?.metrics.lastSuccess.author }}
-            </p>
-            <p>
-                <span>Date:</span> {{ data?.metrics.lastSuccess.time | date }}
-            </p>
-            <p>
-                <span>Branch Name:</span> {{ data?.metrics.lastSuccess.branchName }}</p>
-            <p>
-                <span>Commit Message:</span> {{ data?.metrics.lastSuccess.commitMessage }}</p>
+            <h3>Author</h3>
+            <p>{{ data?.metrics.lastSuccess.author }}</p>
+            <h3>Date</h3>
+            <p>{{ data?.metrics.lastSuccess.time | date }}</p>
+            <h3>Branch Name</h3>
+            <p>{{ data?.metrics.lastSuccess.branchName }}</p>
+            <h3>Commit Message</h3>
+            <p>{{ data?.metrics.lastSuccess.commitMessage }}</p>
             <a [attr.href]="data?.metrics.lastSuccess.concourseUrl" target="_blank">
                 <img class="icon" src="../../../assets/concourse.png" alt="concourse logo" />
             </a>
@@ -84,25 +82,21 @@
                 <mat-expansion-panel *ngFor="let build of data.branches.values[1].builds">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
-                            <p>
-                                <span>{{ build?.author }}</span>
-                            </p>
+                            <h3>{{ build?.author }}</h3>
                         </mat-panel-title>
                         <mat-panel-description>
-                            <p>
-                                <span>{{ build?.time | date }}</span>
-                            </p>
+                            <h3>{{ build?.time | date }}</h3>
                         </mat-panel-description>
                     </mat-expansion-panel-header>
                     <div>
-                        <p>
-                            <span>Status:</span> {{ build?.status.toString().toLowerCase() }}</p>
-                        <p>
-                            <span>Duration:</span> {{ build?.duration }} Seconds</p>
-                        <p>
-                            <span>Pipeline:</span> {{ build?.pipeline }}</p>
-                        <p>
-                            <span>Commit Message:</span> {{ build?.commitMessage }}</p>
+                        <h3>Status</h3>
+                        <p>{{ build?.status.toString().toLowerCase() }}</p>
+                        <h3>Duration</h3>
+                        <p>{{ build?.duration }} Seconds</p>
+                        <h3>Pipeline</h3>
+                        <p>{{ build?.pipeline }}</p>
+                        <h3>Commit Message</h3>
+                        <p>{{ build?.commitMessage }}</p>
                     </div>
                 </mat-expansion-panel>
             </mat-tab>
@@ -111,28 +105,28 @@
                     <mat-expansion-panel *ngFor="let build of data.branches.values[0].builds">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                <p>
-                                    <span>{{ build?.author }}</span>
-                                </p>
+                                <h3>{{ build?.author }}</h3>
                             </mat-panel-title>
                             <mat-panel-description>
-                                <p>
-                                    <span>{{ build?.time | date }}</span>
-                                </p>
+                                <h3>{{ build?.time | date }}</h3>
                             </mat-panel-description>
                         </mat-expansion-panel-header>
                         <div>
+                            <h3>Status</h3>
                             <p>
-                                <span>Status:</span> {{ build?.status.toString().toLowerCase() }}
+                                {{ build?.status.toString().toLowerCase() }}
                             </p>
+                            <h3>Duration</h3>
                             <p>
-                                <span>Duration:</span> {{ build?.duration }} Seconds
+                                {{ build?.duration }} Seconds
                             </p>
+                            <h3>Pipeline</h3>
                             <p>
-                                <span>Pipeline:</span> {{ build?.pipeline }}
+                                {{ build?.pipeline }}
                             </p>
+                            <h3>Commit Message</h3>
                             <p>
-                                <span>Commit Message:</span> {{ build?.commitMessage }}
+                                {{ build?.commitMessage }}
                             </p>
                         </div>
                     </mat-expansion-panel>
