changed doc-site to playground as per doc site sync

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -34,7 +34,7 @@
         menu</mat-icon>
       </button>
       <img class ="ultimate-icon" src="/assets/ultiu.svg">
-      Ignite Design System Documentation Site
+      Ignite Design System Playground
     </mat-toolbar>
     <div id ="body-container">
       <router-outlet></router-outlet>
