--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -2,8 +2,10 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav class="sidenav" mode="side" opened="false" [fixedInViewport]="true"
                [fixedTopGap]="headerHeight + 8">
-    <div><mat-toolbar class = "component-side-nav">Components</mat-toolbar></div>
+    <div><mat-toolbar class = "component-side-nav">Navigation</mat-toolbar></div>
 
+    <mat-divider></mat-divider>
+    <p matSubheader class="sidenav-subheader">Components</p>
     <mat-nav-list dense>
       <div *ngFor="let item of navItems">
         <h3><a mat-list-item [routerLink]="[item.route]"><span mat-line>{{ item.name }}</span></a></h3>
