cleaning up warnings

--- a/demo-app/app/welcome/welcome.scss
+++ b/demo-app/app/welcome/welcome.scss
@@ -44,6 +44,7 @@ main {
     grid-template-rows: repeat(2, auto);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
+    /* autoprefixer: off */
     grid-template-areas: 
         "header header header header"
         ". master develop. ";
